--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "author": "Eddie & Leon",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "config": "^3.3.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
