--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.13",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
